tests/tooling/fixtures/native/execution/positive/message_send_nil_bound_identifier_post_assignment_nil_elision.objc3
// Positive execution fixture: explicit reassignment to nil regains nil-bound send-site elision.
module MessageSendNilBoundIdentifierPostAssignmentNilElisionExecution;

fn main() {
  let receiver = 1;
  receiver = nil;
  let sent = [receiver ping];
  return sent + 16;
}
