tests/tooling/fixtures/native/execution/negative/nil_bound_identifier_reassigned_function.objc3
// Negative execution fixture: mutable nil-bound identifier reassignment to function value is invalid.
module NilBoundIdentifierReassignedFunction;

fn payload() -> i32 {
  return 1;
}

fn main() -> i32 {
  let receiver = nil;
  receiver = payload;
  return [receiver ping];
}
